Fix issues with scroll not showing

--- a/client/src/components/Form.css
+++ b/client/src/components/Form.css
@@ -48,8 +48,7 @@ h1 {
 .question-component {
 	height: 350px;
 	width: 800px;
-	/* overflow: scroll; */
-  /* overflow: auto; */
+  overflow: auto;
 }
 
 .admin-portal-button {
