--- a/client/src/components/pages/Admin/AdminPortal.css
+++ b/client/src/components/pages/Admin/AdminPortal.css
@@ -252,6 +252,7 @@ input[type=checkbox] {
   margin: 15px;
   display: flex;
   box-shadow: 12px 12px 16px 0 rgb(0 0 0 / 25%), -8px -8px 12px 0 rgb(255 255 255);
+  overflow: none;
 }
 
 .updated-copy-of-survey .admin-question-component {
@@ -508,8 +509,10 @@ font-weight: bold;
 
 .question-and-buttons {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   width: 100%;
+  overflow: hidden;
 }
 
 .question-and-options {
@@ -521,6 +524,8 @@ font-weight: bold;
   border-right: 0.5px #197e9c solid;
   width: 100%;
   padding-right: 20px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .delete-option-button {
